# meterstream-platform

./: .env  .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.mongo.yaml  package-lock.json  pipeline-readme.MD
ansible/: inventory.ini  inventory.tmpl  playbook-k3.yml
data/: README.md  test_data_medium.csv  test_data_small.csv
infra/: .terraform.lock.hcl  00-main.tf  01-variables.tf  02-configuration.tf  03-outputs.tf  README.md  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
k8s/auth/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/gateway/: README.md  deployment.yaml  service.yaml
k8s/grafana/: README.md  configmap-dashboard-provider.yaml  configmap-dashboards.yaml  configmap-datasource.yaml  deployment-dev.yaml  deployment.yaml  grafana-dev-pvc.yaml  service-dev.yaml  service.yaml
k8s/influx/: README.md  influx-read.yaml  influx.yaml  replication-job.yaml
k8s/ingestion/: README.md  deployment.yaml  service.yaml
k8s/ingress/: README.md  ingress.yaml
scripts/: README.md  extract_test_data.py  generate_test_token.py  nats_status.py  package.json  peek_kalmar1_kafka.js  produce_test_data.py
services/queries/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/queries/src/: __init__.py  config.py  influx.py  main.py  models.py  system_metrics.py
services/queries/tests/: test_config.py  test_influx.py  test_main.py  test_models.py  test_system_metrics.py
tests/: README.md  load_test.py
(+132 files in other folders)
